Реализация docker compose + написание README

--- a/employee_management/manager/templates/base.html
+++ b/employee_management/manager/templates/base.html
@@ -55,9 +55,9 @@
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="{% static "image/github.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="{% static "image/telegram.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><img src="{% static "image/vk.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/lover-of-sweet"><img src="{% static "image/github.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://t.me/lover_of_sweet"><img src="{% static "image/telegram.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://vk.com/dr_santa"><img src="{% static "image/vk.svg" %}" alt="triangle with all three sides equal" height="24px" width="24px"/></a></li>
       </ul>
     </footer>
   </div>
